--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -265,6 +265,163 @@
     "    elif numbers == 1:\n",
     "        print(\"the engdung is 'st'\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He is Xoki Tohi, he is 28 years old and he lives in Freiburg\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_dic = {\n",
+    "    \"first_name\": \"xoki\",\n",
+    "    \"last_name\" : \"tohi\",\n",
+    "    \"age\" : 28,\n",
+    "    \"city\" : \"Freiburg\",\n",
+    "}\n",
+    "print(\"He is \" +\n",
+    "     new_dic[\"first_name\"].title() +\n",
+    "      \" \" +\n",
+    "     new_dic[\"last_name\"].title() +\n",
+    "     \", he is \" +\n",
+    "     str(new_dic[\"age\"])+\n",
+    "     \" years old and he lives in \"+\n",
+    "     new_dic[\"city\"].title()\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "key: first_name\n",
+      "info: xoki\n",
+      "\n",
+      "key: last_name\n",
+      "info: tohi\n",
+      "\n",
+      "key: age\n",
+      "info: 28\n",
+      "\n",
+      "key: city\n",
+      "info: Freiburg\n",
+      "xoki\n",
+      "tohi\n",
+      "28\n",
+      "Freiburg\n",
+      "\tfirst_name\n",
+      "\tlast_name\n",
+      "\tage\n",
+      "\tcity\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['first_name', 'last_name', 'age', 'city']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for key , value in new_dic.items():\n",
+    "    print(\"\\nkey:\", key)\n",
+    "    print(\"info:\", value)   \n",
+    "for value in new_dic.values():\n",
+    "    print(value)\n",
+    "for key in new_dic:\n",
+    "    print(\"\\t\" + key)\n",
+    "list(new_dic.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "favorite_languages = {\n",
+    "'jen': ['python', 'ruby'],\n",
+    "'sarah': ['c'],\n",
+    "'edward': ['ruby', 'go'],\n",
+    "'phil': ['python', 'haskell'],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "jen`s favourite language is ['python', 'ruby']\n",
+      "\n",
+      "sarah`s favourite language is ['c']\n",
+      "\n",
+      "edward`s favourite language is ['ruby', 'go']\n",
+      "\n",
+      "phil`s favourite language is ['python', 'haskell']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name , language in favorite_languages.items():\n",
+    "    print(\"\\n\" + name + \"`s favourite language is \" + str(language))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "jen`s favourite language is \n",
+      "\tpython\n",
+      "\truby\n",
+      "\n",
+      "sarah`s favourite language is \n",
+      "\tc\n",
+      "\n",
+      "edward`s favourite language is \n",
+      "\truby\n",
+      "\tgo\n",
+      "\n",
+      "phil`s favourite language is \n",
+      "\tpython\n",
+      "\thaskell\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name , language in favorite_languages.items():          #this is better than the previous one \n",
+    "    print(\"\\n\" + name + \"`s favourite language is \")\n",
+    "    for language in language:\n",
+    "        print(\"\\t\" + language)"
+   ]
   }
  ],
  "metadata": {
