--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -422,6 +422,407 @@
     "    for language in language:\n",
     "        print(\"\\t\" + language)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tell me something, and I will repeat it back to you: prompt = \"If you tell us who you are, we can personalize the messages you see.\" prompt += \"\\nWhat is your first name? \" name = input(prompt) print(\"\\nHello, \" + name + \"!\")\n",
+      "prompt = \"If you tell us who you are, we can personalize the messages you see.\" prompt += \"\\nWhat is your first name? \" name = input(prompt) print(\"\\nHello, \" + name + \"!\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = input(\"Tell me something, and I will repeat it back to you: \")\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you tell us who you are, we can personalize the messages you see. \n",
+      "What is your first name21\n",
+      "\n",
+      "Hello, 21!\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"If you tell us who you are, we can personalize the messages you see. \\nWhat is your first name\"\n",
+    "name = input(prompt)\n",
+    "print(\"\\nHello, \" + name + \"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what kind of rental car would like?audi\n",
+      "\n",
+      "Let me see if I can find you a Audi\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = input(\"what kind of rental car would like?\")\n",
+    "print(\"\\nLet me see if I can find you a \" + car.capitalize())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many people in the dinner group ?7\n",
+      "your table is ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "dinnergroup = input(\"How many people in the dinner group ?\")\n",
+    "dinnergroup = int(dinnergroup)\n",
+    "if dinnergroup > 8:\n",
+    "    print(\"you will have to wait for a table\")\n",
+    "else:\n",
+    "    print(\"your table is ready\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a number 2\n",
+      "2 is not a multiple of 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input(\"enter a number \")\n",
+    "number = int(number)\n",
+    "if number % 10 == 0:\n",
+    "    print(str(number) + \" is a multipe of 10\")\n",
+    "else:\n",
+    "    print(str(number) + \" is not a multiple of 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program.hello\n",
+      "hello\n",
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program.again\n",
+      "again\n",
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program.quit\n",
+      "quit\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"\\nTell me something, and I will repeat it back to you:\\nEnter 'quit' to end the program.\"\n",
+    "message = \"\"\n",
+    "while message != \"quit\":\n",
+    "    message = input(prompt)\n",
+    "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please enter the name of a city you have visited: \n",
+      "(Enter 'quit' when you are finished.istanbul\n",
+      "I'd love to go to Istanbul!\n",
+      "\n",
+      "Please enter the name of a city you have visited: \n",
+      "(Enter 'quit' when you are finished.quit\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"\\nPlease enter the name of a city you have visited: \\n(Enter 'quit' when you are finished.\"\n",
+    "while True:\n",
+    "    city = input(prompt)\n",
+    "    if city == 'quit':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"I'd love to go to \" + city.title() + \"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Add to total: 1\n",
+      "Add to total: \n",
+      "Total =  1.00\n",
+      "The mean is 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0.00\n",
+    "x = 0\n",
+    "while True:\n",
+    "    number = input(\"Add to total: \")\n",
+    "    if len(number) == 0:\n",
+    "        break\n",
+    "    total = total + float(number)\n",
+    "    x = x + 1\n",
+    "print(f\"Total = {total: .2f}\")\n",
+    "m_wert = total / x\n",
+    "print(f\"The mean is {m_wert:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_number = 0\n",
+    "while current_number < 10:\n",
+    "    current_number += 1\n",
+    "    if current_number % 2 == 0:\n",
+    "        continue\n",
+    "    print(current_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "enter a Pizza topping: mushroom\n",
+      "you will add mushroom topping to the pizza\n",
+      "\n",
+      "enter a Pizza topping: chilli\n",
+      "you will add chilli topping to the pizza\n",
+      "\n",
+      "enter a Pizza topping: kase\n",
+      "you will add kase topping to the pizza\n",
+      "\n",
+      "enter a Pizza topping: quit\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    topping = input(\"\\nenter a Pizza topping: \")\n",
+    "    if topping == \"quit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"you will add \" + topping + \" topping to the pizza\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please tell me your age: 1\n",
+      "you can have a free movie ticekt\n",
+      "please tell me your age: 12\n",
+      "your movie ticket is 10 Euro\n",
+      "please tell me your age: 20\n",
+      "your ticket is 15 Euro\n",
+      "please tell me your age: \n",
+      "finish\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    age = input(\"please tell me your age: \")\n",
+    "    if age == \"\":\n",
+    "        print(\"finish\")\n",
+    "        break\n",
+    "    age =int(age)\n",
+    "    if age < 3:\n",
+    "        print(\"you can have a free movie ticekt\")\n",
+    "    elif age <= 12:\n",
+    "        print(\"your movie ticket is 10 Euro\")\n",
+    "    else:\n",
+    "        print(\"your ticket is 15 Euro\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verifying user: Candace\n",
+      "Verifying user: Brian\n",
+      "Verifying user: Alice\n"
+     ]
+    }
+   ],
+   "source": [
+    "unconfirmed_users = ['alice', 'brian', 'candace']\n",
+    "confirmed_users = []\n",
+    "while unconfirmed_users:\n",
+    "    current_user = unconfirmed_users.pop()\n",
+    "    print(\"Verifying user: \" + current_user.title())\n",
+    "    confirmed_users.append(current_user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verifying user: Candace\n",
+      "Verifying user: Brian\n",
+      "Verifying user: Alice\n",
+      "\n",
+      "The following users are confirmed: \n",
+      "candace\n",
+      "brian\n",
+      "alice\n"
+     ]
+    }
+   ],
+   "source": [
+    "unconfirmed_users = ['alice', 'brian', 'candace']\n",
+    "confirmed_users = []\n",
+    "while True:\n",
+    "    if unconfirmed_users == []:\n",
+    "        break\n",
+    "    else:\n",
+    "        current_user = unconfirmed_users.pop()\n",
+    "        print(\"Verifying user: \" + current_user.title())\n",
+    "        confirmed_users.append(current_user)\n",
+    "print(\"\\nThe following users are confirmed: \")\n",
+    "for user in confirmed_users:\n",
+    "    print(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "What is your name? szf\n",
+      "Which mountain would you like to climb someday? fd\n",
+      "is there someone else ? (yes/ no) f\n",
+      "\n",
+      "What is your name? fd\n",
+      "Which mountain would you like to climb someday? ffd\n",
+      "is there someone else ? (yes/ no) fdf\n",
+      "\n",
+      "What is your name? fd\n",
+      "Which mountain would you like to climb someday? \n",
+      "is there someone else ? (yes/ no) df\n",
+      "\n",
+      "What is your name? df\n",
+      "Which mountain would you like to climb someday? dfd\n",
+      "is there someone else ? (yes/ no) fd\n",
+      "\n",
+      "What is your name? f\n",
+      "Which mountain would you like to climb someday? fd\n",
+      "is there someone else ? (yes/ no) no\n",
+      "{'szf': 'fd', 'fd': '', 'df': 'dfd', 'f': 'fd'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "responses = {}\n",
+    "polling_active = True\n",
+    "\n",
+    "while polling_active:\n",
+    "    name = input(\"\\nWhat is your name? \")\n",
+    "    response = input(\"Which mountain would you like to climb someday? \")\n",
+    "    responses[name] = response\n",
+    "    repeat = input(\"is there someone else ? (yes/ no) \")\n",
+    "    if repeat == 'no':\n",
+    "        polling_active = False\n",
+    "  \n",
+    "print(responses)"
+   ]
   }
  ],
  "metadata": {
